<resources>
    <string name="app_name">Routina</string>
    <string name="tag_line">with a little guidance from me, you\'ll have your routines down in no time!</string>

    <string name="label_list">My Routines</string>
    <string name="label_edit">Edit Routine/Tasks</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_routine">Delete Routine</string>
    <string name="label_add">+</string>
    <string name="label_run">Start Routine</string>

    <string name="label_create_routine">Create Routine</string>
    <string name="label_save">Save</string>
    <string name="label_name">Name: </string>
    <string name="label_start">Start Time: </string>
    <string name="label_days">Days: </string>
    <string name="label_tasks">Tasks: </string>
    <string name="label_add_task">Add a Task</string>
    <string name="label_cancel_routine">Cancel</string>


    <string name="label_task_name">Task Name Here</string>
    <string name="label_time_needed">Time Needed in Minutes (e.g. 10)</string>
    <string name="label_time_snooze">Snooze Time in Minutes (e.g. 2)</string>

    <string name="label_done">Done!</string>
    <string name="label_snooze">Snooze</string>

    <string name="time_remaining_minutes">You have %1$s minutes to finish!</string>
    <string name="time_remaining_seconds">You have %1$d seconds left!</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tues</string>
    <string name="wed">Wed</string>
    <string name="thu">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="routine_name_hint">routine name here</string>
    <string name="task_name_hint">task name here</string>
    <string name="start_time_hint">8:00am</string>
    <string name="time_hint">4 minutes</string>
    <string name="snooze_hint">30 seconds</string>
    <string name="com.optimizely.api_key" translatable="false"> 18527966de2c666f43d698f67460f7982101a120b9049538631956f7144dc527:Kyxqekg6B</string>

    <string name="label_feedback_good">Nice work!</string>
    <string name="label_feedback_bad">A for Effort</string>

    <string name="label_out_of_time">Uh oh! You\'re out of time! Move onto the next task!</string>

    <string name="label_delete_question">Are you sure you want to delete this routine?</string>
</resources>

