<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/marginAround">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_task_name"
            android:text="@string/label_name"
            android:layout_margin="@dimen/marginBetween"
            android:textSize="@dimen/fontMed"
            android:textColor="@color/colorDark"
            android:contentDescription="@string/label_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_task_name"
            android:inputType="text"
            android:layout_toEndOf="@id/text_task_name"
            android:hint="@string/task_name_hint"
            android:contentDescription="@string/task_name_hint"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_task_time"
            android:text="@string/label_time_needed"
            android:layout_margin="@dimen/marginBetween"
            android:textSize="@dimen/fontMed"
            android:textColor="@color/colorDark"
            android:contentDescription="@string/label_time_needed"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_task_time"
            android:inputType="time"
            android:layout_toEndOf="@id/text_task_time"
            android:hint="@string/time_hint"
            android:contentDescription="time needed for task"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_task_snooze"
            android:text="@string/label_time_snooze"
            android:layout_margin="@dimen/marginBetween"
            android:textSize="@dimen/fontMed"
            android:textColor="@color/colorDark"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_task_snooze"
            android:inputType="time"
            android:layout_toEndOf="@id/text_task_snooze"
            android:hint="@string/snooze_hint"
            android:contentDescription="snooze time needed for task"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save_task"
        android:text="@string/label_save"
        android:theme="@style/ButtonStyle"
        android:textColor="@color/colorTeal"
        android:contentDescription="@string/label_save"/>
</LinearLayout>
